<resources>
    <string name="app_name">Fisherman’s pocket</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_edit">Edit</string>
    <string name="action_remove">Remove</string>
    <string name="menu_my_lures">My lures</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_info">Info</string>
    <string name="name">Name</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="manufacturer_with_colon">Manufacturer:</string>
    <string name="type">Type</string>
    <string name="type_with_colon">Type:</string>
    <string name="diving_depth">Deep, m</string>
    <string name="diving_depth_with_colon">Diving dept:</string>
    <string name="floatation">Floatation</string>
    <string name="floatation_with_colon">Floatation:</string>
    <string name="description">Description</string>
    <string name="weight">Weight, gr</string>
    <string name="weight_with_colon">Weight, gr:</string>
    <string name="version">Версия:</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="length">Length, mm</string>
    <string name="length_with_colon">Length, mm:</string>
    <string name="take_photo">Take photo</string>
    <string name="pick_image">Pick image</string>
    <string name="notes">Notes</string>
    <string name="color">Color</string>
    <string name="color_with_colon">Color:</string>
    <string name="add_note">Add note</string>
    <string name="caught_fish">Caught fish</string>
    <string name="fish_caught">Fish caught</string>
    <string name="lure_image">Lure image</string>
    <string name="icon_caught_fish">Caught fish icon</string>
    <string name="icon_diving_depth">Diving depth lure icon</string>
    <string name="icon_floatation">Floatation lure icon</string>
    <string name="icon_weight">weight lure icon</string>
    <string name="icon_length">Length lure icon</string>
    <string name="label_creating">Creating</string>
    <string name="label_editing">Editing</string>
    <string name="label_lure">Lure</string>
    <string name="remove">Remove</string>
    <string name="toast_fill_field_name">Fill field lure’s name</string>
    <string name="info_title1" translatable="false">Классификация и типы проводок воблеров</string>
    <string name="info_title2" translatable="false">Классификация воблеров по форме:</string>
    <string name="info_type_minnow" translatable="false"><b>Minnow</b> (минноу) — пескарь, гольян, мелкая рыбёшка. Одна из самых распространенных форм воблеров. Эти воблеры имеют вытянутое строение тела. Своя игра либо отсутствует, либо слабо выражена. Поэтому её проводка требует дополнительной анимации.</string>
    <string name="vobler_minnow_image" translatable="false">Vobler minnow image</string>
    <string name="info_type_shad" translatable="false"><b>Shad (шэд)</b> — воблер, имеющий геометрию тела, приближенную к натуральной форме молоди карповых рыб. Обладает собственной игрой, чему способствует высокое и сплющенное с боков строение тела.</string>
    <string name="vobler_shad_image" translatable="false">Vobler shad image</string>
    <string name="info_type_fat" translatable="false"><b>Fat</b> (фэт, фат) — толстый. Имеют утолщенную каплевидную форму тела. Обладают активной игрой, интенсивно переваливаясь с боку на бок. Основной тип воблеров для ловли голавля и язя. Некоторые выделяют эти воблеры в отдельный класс, другие же считают фэт разновидностью крэнка.</string>
    <string name="vobler_fat_image" translatable="false">Vobler fat image</string>
    <string name="info_type_crank" translatable="false"><b>Crank</b> (крэнк) — чудак, заводной. Действительно обладают заводным и чудаковатым характером на проводке. Интересно, что в переводе с немецкого, слово «Krank»,  означает больной. Не потому ли эти воблеры так хорошо имитируют агонизирующую больную рыбку?  В отличие от предыдущего класса, крэнки обладают чуть менее широким, слегка приплюснутым  телом, и как бы являются промежуточным звеном между шэдом и фэтом. Также хороши для ловли белой хищной рыбы.</string>
    <string name="vobler_crank_image" translatable="false">Vobler crank image</string>
    <string name="info_type_rattlin" translatable="false"><b>Раттлин</b> (виб). По сути, представляют собой безлопастной крэнк. Чаще всего бывают тонущими. Слово «Раттлин» стало нарицательным, благодаря пионеру этого типа приманок Rapala Rattlin. В настоящее время всё чаще применяется слово VIB (vibration), что более ярко характеризует этот класс. Петли для крепления расположены на спинной части. Вибы можно проводить в разных слоях воды. Они также являются отличными приманками для отвесной ловли со льда.</string>
    <string name="vobler_rattlin_image" translatable="false">Vobler rattlin image</string>
    <string name="info_type_swimbait" translatable="false"><b>Swimbait</b> (свимбейт). Эти воблеры также лишены лопасти. Благодаря сочлененному сегментированному телу, обладают собственной игрой. Имеют отрицательную плавучесть. Проводку свимбейтов  либо равномерная, либо с применением лёгких рывков.</string>
    <string name="vobler_swimbait_image" translatable="false">Vobler swimbait image</string>
    <string name="info_type_stickbait" translatable="false"><b>Stickbait</b> (стикбейт) — палочка. Имеют вытянутое безлопастное прямое или вогнутое тело. Практически не обладают собственной игрой. Исключительно тонущие приманки. Крепление петли в носовой части. Стикбейты обычно применяются в морской ловле, но ничто не мешает ловить ими и во внутренних водоёмах. Проводка с подрывами,  по типу с джиговой.</string>
    <string name="vobler_stickbait_image" translatable="false">Vobler stickbait image</string>
    <string name="info_type_walker" translatable="false"><b>Walker</b> (волкер или уокер) — класс плавающих поверхностных безлопастных приманок. Эффективны для ловли в тихую погоду, когда хищники охотятся у  поверхности воды. Своё название получили от способа анимации “walking the dog” (прогуливать собаку). Воблер,  виляет у поверхности воды из стороны в сторону, выписывая “змейку” и   точно имитирует движения кормовой рыбы.  Волкер позволяет успешно облавливать окна чистой воды. Петля крепления расположена внизу головной части.</string>
    <string name="vobler_walker_image" translatable="false">Vobler walker image</string>
    <string name="info_type_popper" translatable="false"><b>Поппер</b> — класс воблеров с воронкообразным углублением в носовой части. Благодаря этому, при рывковой проводке, эти приманки издают шумные хлюпающие звуки, привлекающие хищных рыб. Интересно, что эта конструктивная особенность делает попперы, чуть ли не единственными из всех воблеров, которые могут иметь отличающиеся друг от друга формы тела. В свою очередь, эти различия позволяют  попперам располагаться в воде под разными углами, относительно поверхности.</string>
    <string name="vobler_popper_image" translatable="false">Vobler popper image</string>
    <string name="info_type_crawler" translatable="false"><b>Crawler</b> (кроулер) — ползущий. Шумные поверхностные приманки с двумя лопастями, расположенные в головной части. Благодаря этому, при проводке переваливаюся с боку на бок и оставляют характерный след на поверхности воды.</string>
    <string name="vobler_crawler_image" translatable="false">Vobler crawler image</string>
    <string name="info_type_propbait" translatable="false"><b>Пропбейт</b> — поверхностные приманки, с распоженным в носовой или в хвостовой части пропеллером. Благодаря вибрациям и издаваемому шуму, хорошо привлекают хищных рыб. Попбейты можно использовать на заросших участках воды.</string>
    <string name="vobler_propbait_image" translatable="false">Vobler propbait image</string>
    <string name="info_type_topwater" translatable="false"><b>Top water</b> (топвотер). В свою очередь, все перечисленные поверхностные приманки (попперы, уокеры, пропбейты, кроулеры) можно отнести к топвотерам. Получается нечто, типа классы внутри класса. На самом деле тут никаких разногласий нет, ибо топвотеры давно вылезли из рамок сугубо воблерной тематики.  Развитие топвотеров привело к тому, что появились и другие  приманки для ловли на поверхности.  Можно вспомнить о различных резиновых и пластиковых креатурах лягушек, мышей, утят и т.д. Сюда же можно отнести и воблеры, имитирующие различных упавших на воду насекомых, таких как жуки, цикады, кузнечики. С некоторой натяжкой  топвотером можно даже считать такой гибрид, как попла поппер. Словом, развитие идей идёт полным ходом.</string>
    <string name="vobler_topwater_image" translatable="false">Vobler topwater image</string>
    <string name="info_type_jerkbait" translatable="false"><b>Jerk bait</b> (джеркбейт) — крупные, в основном безлопастные приманки для ловли трофейного хищника, в первую очередь щуки. Анимация рывковая (jerking — дергать). Такие воблеры, вес которых может переваливаясь за 100 грамм, требуют специального удилища повышенной мощности.</string>
    <string name="vobler_jerkbait_image" translatable="false">Vobler jerkbait image</string>
    <string name="info_title3" translatable="false">Классификация воблеров по степени плавучести:</string>
    <string name="info_floating_type" translatable="false"><b>FS</b> или <b>HS</b> (fast sinking или heavy sinking) — быстро тонущие; \n<b>S</b> (sinking) — тонущие; \n<b>SS</b> (slow sinking) — медленно тонущие; \n<b>SSS</b> (super slow sinking) — очень медленно тонущие; \n<b>SP</b> (suspending) — суспендеры или воблеры с нейтральной плавучестью; \n<b>SF</b> (slow floating) — медленно всплывающие; \n<b>F</b>(floating) — плавающие; \n<b>FF</b> (fast floating) — быстро всплывающие.</string>
    <string name="info_title4" translatable="false">Классификация воблеров воблеров по заглублению:</string>
    <string name="info_deep_type" translatable="false"><b>SSR</b> (super shallow runners) — глубина заглубления таких приманок не превышает 30 см; \n<b>SR</b> (shallow runners) — максимальное заглубление воблера с такой аббревиатурой обычно колеблется в районе 1 метра; \n<b>MDR</b> (medium deep runners) — заглубление таких воблеров в зависимости от размера обычно лежит в промежутке 1,2 — 1,8 метра (иногда достигает 2 метров); \n<b>DD</b> (deep divers) — воблеры с глубоким погружением, могут заглубляться до 3,5-4 метров; \n<b>EDD</b> или <b>XDD</b> (extra deep divers) — сверхглубоководные воблеры, глубина погружения может превышать 6 метров. Такие приманки обычно применяются в морской рыбалке при ловле троллингом.</string>
    <string name="info_title5" translatable="false">Основные типы проводок воблеров:</string>
    <string name="info_wobbler_play" translatable="false"><b>Равномерная проводка</b> — самая простая техника ловли. Отлично подходит для воблеров, обладающих собственной игрой. \n<b>Твичинг</b> (twitching) — дергать. Предполагает проводку с помощью подёргиваний. Они могут проходить в быстром или в медленном темпе. Длительность интервалов также может быть разной. \n<b>Джеркинг</b> — предполагает рывковую анимацию. Резкие и амплитудные движения воблера могут спровоцировать атаку, поскольку хищника раздражает столь бесцеремонное поведение добычи в зоне его отдыха или охоты. \n<b>Джиговая проводка</b> — характерна для стикбейтов. Производится амплитудным подергиваниями с последующей паузой, во время которой приманка как бы осыпается. Именно во время паузы чаще всего и происходит атака. \n<b>Троллинг</b> — способ ловли, при которой производится протяжка воблера вслед за движением судна с мотором. \n<b>Stop &amp; Go</b> — Проводка приманки с остановками. Одна из разновидностей твичинга. Выполняется в виде пауз различной длительности при движении воблера.</string>
</resources>