<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_my_lures">

    <fragment
        android:id="@+id/nav_my_lures"
        android:name="com.nanoshkin.fishermanspocket.presentation.ui.MyLuresFragment"
        android:label="@string/menu_my_lures"
        tools:layout="@layout/fragment_my_lures" />

    <fragment
        android:id="@+id/nav_weather"
        android:name="com.nanoshkin.fishermanspocket.presentation.ui.WeatherFragment"
        android:label="@string/menu_weather"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.nanoshkin.fishermanspocket.presentation.ui.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />

    <activity
        android:id="@+id/mainActivity"
        android:name="com.nanoshkin.fishermanspocket.presentation.MainActivity"
        android:label="app_bar_main"
        tools:layout="@layout/app_bar_main" />

    <fragment
        android:id="@+id/createEditLureFragment"
        android:name="com.nanoshkin.fishermanspocket.presentation.ui.CreateEditLureFragment"
        android:label="fragment_create_edit_lure"
        tools:layout="@layout/fragment_create_edit_lure" />
</navigation>