<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_lure_full_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_tiny"
    app:cardCornerRadius="@dimen/corner_radius_small"
    app:cardElevation="@dimen/elevation_small">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:padding="@dimen/spacing_normal">

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_large"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/caught_fish_image_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="JACKALL MAG SQUAD" />

        <ImageView
            android:id="@+id/caught_fish_image_view"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="@dimen/spacing_large"
            android:src="@drawable/ic_caught_fish"
            app:layout_constraintBottom_toBottomOf="@+id/name_text_view"
            app:layout_constraintEnd_toStartOf="@id/caught_fish_count_text_view"
            app:layout_constraintStart_toEndOf="@id/name_text_view"
            app:layout_constraintTop_toTopOf="@+id/name_text_view"
            app:tint="?attr/colorControlNormal"
            android:contentDescription="@string/icon_caught_fish" />

        <TextView
            android:id="@+id/caught_fish_count_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_tiny"
            app:layout_constraintBottom_toBottomOf="@+id/caught_fish_image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/caught_fish_image_view"
            app:layout_constraintTop_toTopOf="@+id/caught_fish_image_view"
            tools:text="10" />

        <TextView
            android:id="@+id/type_label_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:text="@string/type_with_colon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_text_view" />

        <TextView
            android:id="@+id/type_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_tiny"
            app:layout_constraintBottom_toBottomOf="@+id/type_label_text_view"
            app:layout_constraintStart_toEndOf="@id/type_label_text_view"
            app:layout_constraintTop_toTopOf="@+id/type_label_text_view"
            tools:text="Minnow" />

        <ImageView
            android:id="@+id/diving_depth_image_view"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:src="@drawable/ic_south_east_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/type_label_text_view"
            android:contentDescription="@string/icon_diving_depth" />

        <TextView
            android:id="@+id/diving_depth_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_tiny"
            app:layout_constraintBottom_toBottomOf="@+id/diving_depth_image_view"
            app:layout_constraintStart_toEndOf="@id/diving_depth_image_view"
            app:layout_constraintTop_toTopOf="@+id/diving_depth_image_view"
            tools:text="1.5" />

        <ImageView
            android:id="@+id/floatation_image_view"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="@dimen/spacing_large"
            android:src="@drawable/ic_water_24"
            app:layout_constraintBottom_toBottomOf="@+id/diving_depth_image_view"
            app:layout_constraintStart_toEndOf="@+id/diving_depth_text_view"
            app:layout_constraintTop_toTopOf="@+id/diving_depth_image_view"
            android:contentDescription="@string/icon_floatation" />

        <TextView
            android:id="@+id/floatation_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_tiny"
            app:layout_constraintBottom_toBottomOf="@+id/diving_depth_image_view"
            app:layout_constraintStart_toEndOf="@+id/floatation_image_view"
            app:layout_constraintTop_toTopOf="@+id/diving_depth_image_view"
            tools:text="SP" />

        <ImageView
            android:id="@+id/weight_image_view"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="@dimen/spacing_large"
            android:src="@drawable/ic_barbel_24"
            app:layout_constraintBottom_toBottomOf="@+id/diving_depth_image_view"
            app:layout_constraintStart_toEndOf="@+id/floatation_text_view"
            app:layout_constraintTop_toTopOf="@+id/diving_depth_image_view"
            android:contentDescription="@string/icon_weight" />

        <TextView
            android:id="@+id/weight_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_tiny"
            app:layout_constraintBottom_toBottomOf="@+id/diving_depth_image_view"
            app:layout_constraintStart_toEndOf="@+id/weight_image_view"
            app:layout_constraintTop_toTopOf="@+id/diving_depth_image_view"
            tools:text="21" />

        <ImageView
            android:id="@+id/length_image_view"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="@dimen/spacing_large"
            android:src="@drawable/ic_rule_24"
            app:layout_constraintBottom_toBottomOf="@+id/diving_depth_image_view"
            app:layout_constraintStart_toEndOf="@+id/weight_text_view"
            app:layout_constraintTop_toTopOf="@+id/diving_depth_image_view"
            android:contentDescription="@string/icon_length" />

        <TextView
            android:id="@+id/length_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_tiny"
            app:layout_constraintBottom_toBottomOf="@+id/diving_depth_image_view"
            app:layout_constraintStart_toEndOf="@+id/length_image_view"
            app:layout_constraintTop_toTopOf="@+id/diving_depth_image_view"
            tools:text="128" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>